# infocenter

./: .gitignore  README.md  de.volkswagen.infocenter.json  infocenter.doap  infocenter.spec  meson.build  pyproject.toml  ruff.toml
.github/workflows/: check.yml  debs.yml  release.yml  rpms.yml
data/: de.volkswagen.infocenter-autostart.desktop  de.volkswagen.infocenter.desktop.in  de.volkswagen.infocenter.gschema.xml  de.volkswagen.infocenter.metainfo.xml.in  meson.build
data/icons/: meson.build
debian/: changelog  control  copyright  install  rules
infocenter/: action_row.py  checks_config.json  const.py.in  disclaimer.py  dynamic_system_checks.py  edid.py  infocenter.gresource.xml  infocenter.in  main.py  meson.build  quicklink.py  system_check.py  system_checks.py  system_information_provider.py  window.py
infocenter/gtk/: about_dialog.ui.in  action-row.blp  disclaimer.blp  quicklink.blp  window.blp
infocenter/plugins/: helper.py  palo_alto_plugin.py  zscaler_plugin.py
infocenter/yaml/en/: client.yaml  disclaimer.yaml  quicklinks.yaml  support.yaml
po/: POTFILES  de.po  de.volkswagen.infocenter.pot  meson.build
